Update reitti-install.sh